--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<title>gh-pages template</title>
 </head>
 <body>
-  <div id="Hello World... I'm trying github pages!">Hello world!</div>
+  <div id="Helloworld">Trying GitHub pages</div>
 </body>
 </html>
