--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <h1><span itemprop="name">Fabian Caba Heilbron</span></h1>
 
 <div id="sidebar">
-<img src="me5.jpg" id="me" itemprop="photo">
+<img src="img/me5.jpg" id="me" itemprop="photo">
 </div>
 
 <p> Currently, I am doing an internship at <a href="http://www.kaust.edu.sa/">KAUST</a> (Kingdom of Saudi Arabia) advised by Professor <a href="http://www.bernardghanem.com/">Bernard Ghanem</a>. My research interests lie in Computer Vision and Machine Learning. Specifically, I aim to tackle challenges of human activity recognition at large scale. I study efficient ways to harvest and annotate massive amount of data depicting human activities. Ultimately, I explore novel ideas in order to help computers to understand the complex visual world of the human motion.</p>
@@ -82,7 +82,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <h2>Publications</h2>
 
 <div class="publication">
-<a href="http://yamdrok.stanford.edu/crowd/icmr.pdf"><img src="crowd2.jpg" class="publogo"></a>
+<a href="http://yamdrok.stanford.edu/crowd/icmr.pdf"><img src="img/crowd2.jpg" class="publogo"></a>
 <p>
 <strong><a href="http://yamdrok.stanford.edu/crowd/icmr.pdf">Collecting and Annotating Human Activities in Web Videos</a></strong><br>
 Fabian Caba Heilbron, Juan Carlos Niebles<br>
