Added infor related with accv 2014 paper.

--- a/index.html
+++ b/index.html
@@ -30,22 +30,6 @@ a.invisible { color : inherit; text-decoration : inherit; }
 .schoollogo img { margin-bottom : 10px; }
 </style>
 
-<script type="text/javascript">
-
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-17813713-3']);
-_gaq.push(['_setDomainName', '.mit.edu']);
-_gaq.push(['_trackPageview']);
-
-(function() {
-var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
-var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-
-</script>
-
-
 </head>
 <body>
 <div id="container">
@@ -82,8 +66,18 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <h2>Publications</h2>
 
 <div class="publication">
-<a href="http://yamdrok.stanford.edu/crowd/icmr.pdf"><img src="img/crowd2.jpg" class="publogo"></a>
+<a href="actioncue/index.html"><img src="img/actioncue.jpg" class="publogo"></a>
 <p>
+<strong><a href="actioncue/index.html">Camera Motion and Surrounding Scene Appearance as Context for Action Recognition</a></strong><br>
+Fabian Caba Heilbron, Ali Thabet, Juan Carlos Niebles, Bernard Ghanem<br>
+<em>ACCV 2014</em><br>
+<span class="links"><a href="actioncue/paper/actioncue.pdf">Paper</a>
+<a href="actioncue/poster/actioncue.pdf">Poster</a>
+<a href="actioncue/index.html">Project page</a></span>
+</div>
+
+<div class="publication">
+<a href="http://yamdrok.stanford.edu/crowd/icmr.pdf"><img src="img/crowd2.jpg" class="publogo"></a>
 <strong><a href="http://yamdrok.stanford.edu/crowd/icmr.pdf">Collecting and Annotating Human Activities in Web Videos</a></strong><br>
 Fabian Caba Heilbron, Juan Carlos Niebles<br>
 <em>ICMR 2014</em><br>
