Minor changes on page style.

--- a/actioncue/index.html
+++ b/actioncue/index.html
@@ -158,6 +158,7 @@ p code
 
 
 </style>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -190,11 +191,16 @@ for certain action classes. Below we show an example of our foreground-backgroun
 
 <br clear="all">
 
+<h4>Resources:</h4>
+<li><span>Download our ACCV 2014 <strong> <a href="paper/actioncue.pdf">Paper</a>. </strong></br></span></li>
+<li><span>Check out our <strong> <a href="poster/actioncue.pdf">Poster presentation!</a> </strong></br></span></li>
+<li><span><strong>Code</strong> can be cloned from <strong><a href="https://github.com/cabaf/actioncue.git">Here!</a></strong></span></li>
+
 </div>
 
-<table class="contentblock">
+<!--<table class="contentblock">
 <tr>
-<td style="width:350px;">
+<td style="width:300px;">
 
 <h2>Resources</h2>
 <span>Download our ACCV 2014 <strong> <a href="paper/actioncue.pdf">Paper</a>. </strong></br></span>
@@ -202,7 +208,7 @@ for certain action classes. Below we show an example of our foreground-backgroun
 <span><strong>Code</strong> can be cloned from <strong><a href="https://github.com/cabaf/actioncue.git">Here!</a></strong></span>
 
 </td>
-<td style="width:550px;">
+<td style="width:300px;">
 
 <h2>Acknowledgment</h2>
 <p> <small>Research reported in this publication was supported by
@@ -213,15 +219,21 @@ Faculty Fellowship.</small><p>
 </td>
 </tr>
 </table>
-
+-->
 <div class="content" id="references">
+<h2>Acknowledgment</h2>
+<p> <small>Research reported in this publication was supported by
+competitive research funding from King Abdullah University of Science and
+Technology (KAUST). F.C.H. was also supported by a COLCIENCIAS Young
+Scientist and Innovator Fellowship. J.C.N. is supported by a Microsoft Research
+Faculty Fellowship.</small><p>
 
 <h2>References</h2>
 <ol>
 <small><li>H. Wang and C. Schmid. Action Recognition with Improved Trajectories. In ICCV, 2013.</li></small>
 </ol>
 
-<p>If you use any of our materials in your research, please cite our ACCV 2014 paper:</p>
+<p>If you use any of this work material in your research, please cite our ACCV 2014 paper:</p>
 <p>F.C. Heilbron, A. Thabet, J.C. Niebles and B. Ghanem. Camera Motion and Surrounding Scene Appearance as Context for Action Recognition. In ACCV, 2014.</p>
 
 <code>
@@ -234,7 +246,7 @@ Faculty Fellowship.</small><p>
 </code>
 
 </div>
-
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
 </html>
 
