Minor changes on page style.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ a.invisible { color : inherit; text-decoration : inherit; }
 .schoollogo { text-align : center; color : #999; width : 150px;}
 .schoollogo img { margin-bottom : 10px; }
 </style>
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 </head>
 <body>
 <div id="container">
@@ -38,7 +38,7 @@ a.invisible { color : inherit; text-decoration : inherit; }
 <h1><span itemprop="name">Fabian Caba Heilbron</span></h1>
 
 <div id="sidebar">
-<img src="img/me5.jpg" id="me" itemprop="photo">
+<img src="img/me5.jpg" id="me" itemprop="photo" class="img-circle">
 </div>
 
 <p> Currently, I am doing an internship at <a href="http://www.kaust.edu.sa/">KAUST</a> (Kingdom of Saudi Arabia) advised by Professor <a href="http://www.bernardghanem.com/">Bernard Ghanem</a>. My research interests lie in Computer Vision and Machine Learning. Specifically, I aim to tackle challenges of human activity recognition at large scale. I study efficient ways to harvest and annotate massive amount of data depicting human activities. Ultimately, I explore novel ideas in order to help computers to understand the complex visual world of the human motion.</p>
@@ -67,21 +67,20 @@ a.invisible { color : inherit; text-decoration : inherit; }
 
 <div class="publication">
 <a href="actioncue/index.html"><img src="img/actioncue.jpg" class="publogo"></a>
-<p>
 <strong><a href="actioncue/index.html">Camera Motion and Surrounding Scene Appearance as Context for Action Recognition</a></strong><br>
 Fabian Caba Heilbron, Ali Thabet, Juan Carlos Niebles, Bernard Ghanem<br>
-<em>ACCV 2014</em><br>
-<span class="links"><a href="actioncue/paper/actioncue.pdf">Paper</a>
+<em>ACCV 2014. - </em>
+<a href="actioncue/paper/actioncue.pdf">Paper</a>
 <a href="actioncue/poster/actioncue.pdf">Poster</a>
 <a href="actioncue/index.html">Project page</a></span>
 </div>
 
-<div class="publication">
+<div class="publication" style="margin-top: 20px;">
 <a href="http://yamdrok.stanford.edu/crowd/icmr.pdf"><img src="img/crowd2.jpg" class="publogo"></a>
 <strong><a href="http://yamdrok.stanford.edu/crowd/icmr.pdf">Collecting and Annotating Human Activities in Web Videos</a></strong><br>
 Fabian Caba Heilbron, Juan Carlos Niebles<br>
-<em>ICMR 2014</em><br>
-<span class="links"><a href="http://yamdrok.stanford.edu/crowd/icmr.pdf">Paper</a> <a href="#">Poster</a></span> 
+<em>ICMR 2014. - </em>
+<a href="http://yamdrok.stanford.edu/crowd/icmr.pdf">Paper</a> <a href="#">Poster</a></span> 
 </div>
 
 <!--
@@ -96,10 +95,10 @@ Fabian Caba<br>
 </p>
 </div>
 -->
-<p style="text-align:center;font-size:16px;padding-top:20px;">In God we trust. All others must bring data.<br>&mdash; <a href="http://en.wikipedia.org/wiki/W._Edwards_Deming">W. Edwards Deming</a></p>
+<p style="margin-top:50px;text-align:center;font-size:16px;padding-top:20px;">In God we trust. All others must bring data.<br>&mdash; <a href="http://en.wikipedia.org/wiki/W._Edwards_Deming">W. Edwards Deming</a></p>
 
 </div>
 </div>
-
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
 </html>
