--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@ a.invisible { color : inherit; text-decoration : inherit; }
 .schoollogo img { margin-bottom : 10px; }
 </style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56208223-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </head>
 <body>
 <div id="container">
