Updated publication list and personal info.

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ a.invisible { color : inherit; text-decoration : inherit; }
 <h1><span itemprop="name">Fabian Caba Heilbron</span></h1>
 
 <div id="sidebar">
-<img src="img/me5.jpg" id="me" itemprop="photo" class="img-circle">
+<img src="img/me_scaled.jpg" id="me" itemprop="photo" class="img-circle">
 </div>
 
-<p> Currently, I am doing an internship at <a href="http://www.kaust.edu.sa/">KAUST</a> (Kingdom of Saudi Arabia) advised by Professor <a href="http://www.bernardghanem.com/">Bernard Ghanem</a>. My research interests lie in Computer Vision and Machine Learning. Specifically, I aim to tackle challenges of human activity recognition at large scale. I study efficient ways to harvest and annotate massive amount of data depicting human activities. Ultimately, I explore novel ideas in order to help computers to understand the complex visual world of the human motion.</p>
+<p> I am a PhD student at <a href="http://www.kaust.edu.sa/">KAUST</a> (Kingdom of Saudi Arabia) advised by Professor <a href="http://www.bernardghanem.com/">Bernard Ghanem</a>. My research interests lie in Computer Vision and Machine Learning. Specifically, I aim to tackle challenges of human activity recognition at large scale. I study efficient ways to harvest and annotate massive amount of data depicting human activities.</p>
 
 <p> I received my Master degree in Electronics from <a href="http://www.uninorte.edu.co/">Universidad del Norte</a> in 2013, under the supervision of Professor <a href="http://www.niebles.net/">Juan Carlos Niebles</a>.</p>
 
@@ -76,6 +76,16 @@ a.invisible { color : inherit; text-decoration : inherit; }
 </div>
 
 <h2>Publications</h2>
+
+<div class="publication">
+<a href=#><img src="img/anet_scaled.jpg" class="publogo"></a>
+<strong><a href=#>ActivityNet: A Large-Scale Video Benchmark for Human Activity Understanding</a></strong><br>
+Fabian Caba Heilbron, Victor Escorcia, Bernard Ghanem, Juan Niebles<br>
+<em>CVPR, June 2015. - </em>
+<a href=#>Paper</a>
+<a href=#>Poster</a>
+<a href=#>Project page</a></span>
+</div>
 
 <div class="publication">
 <a href="actioncue/index.html"><img src="img/actioncue.jpg" class="publogo"></a>
