Updated links anet

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@ a.invisible { color : inherit; text-decoration : inherit; }
 
 <div class="publication">
 <a href=#><img src="img/anet_scaled.jpg" class="publogo"></a>
-<strong><a href=#>ActivityNet: A Large-Scale Video Benchmark for Human Activity Understanding</a></strong><br>
+<strong><a href="http://activity-net.org/">ActivityNet: A Large-Scale Video Benchmark for Human Activity Understanding</a></strong><br>
 Fabian Caba Heilbron, Victor Escorcia, Bernard Ghanem, Juan Niebles<br>
 <em>CVPR, June 2015. - </em>
-<a href=#>Paper</a>
+<a href="https://dl.dropboxusercontent.com/u/18955644/website_files/ActivityNet/ActivityNet_CVPR2015.pdf">Paper</a>
 <a href=#>Poster</a>
-<a href=#>Project page</a></span>
+<a href="http://activity-net.org/">Project page</a></span>
 </div>
 
 <div class="publication">
