Updated links anet, logo url

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ a.invisible { color : inherit; text-decoration : inherit; }
 <h2>Publications</h2>
 
 <div class="publication">
-<a href=#><img src="img/anet_scaled.jpg" class="publogo"></a>
+<a href="http://activity-net.org/"><img src="img/anet_scaled.jpg" class="publogo"></a>
 <strong><a href="http://activity-net.org/">ActivityNet: A Large-Scale Video Benchmark for Human Activity Understanding</a></strong><br>
 Fabian Caba Heilbron, Victor Escorcia, Bernard Ghanem, Juan Niebles<br>
 <em>CVPR, June 2015. - </em>
