--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ a.invisible { color : inherit; text-decoration : inherit; }
 <h1><span itemprop="name">Fabian Caba Heilbron</span></h1>
 
 <div id="sidebar">
-<img src="img/me_scaled.jpg" id="me" itemprop="photo" class="img-circle">
+<img src="img/fabian.png" id="me" width="180" itemprop="photo" class="img-circle">
 </div>
 
 <p> I am a PhD student at <a href="http://www.kaust.edu.sa/">KAUST</a> (Kingdom of Saudi Arabia) advised by Professor <a href="http://www.bernardghanem.com/">Bernard Ghanem</a>. My research interests lie in Computer Vision and Machine Learning. Specifically, I aim to tackle challenges of human activity recognition at large scale. I study efficient ways to harvest and annotate massive amount of data depicting human activities.</p>
@@ -75,15 +75,25 @@ a.invisible { color : inherit; text-decoration : inherit; }
 
 </div>
 
+<h2>News</h2>
+<b>[03-02-2016]</b> One paper accepted to CVPR 2016:
+<div class="publication" style="margin-left: 10px;">
+<strong><a href=#>Fast Temporal Activity Proposals for Efficient Detection of Human Actions in Untrimmed Videos</a></strong><br>
+Fabian Caba Heilbron, Juan Carlos Niebles, Bernard Ghanem. <em>CVPR, June 2016.</em>
+</div>
+
+<b>[02-18-2016]</b> ActivityNet Large Scale Activity Recognition Challenge <a target="_blank" href="http://activity-net.org/challenges/2016/">Website</a> is released.
+<div class="publication" style="margin-left: 10px;">
+The Challenge is a half-day workshop to be held on July 1 in conjuction with CVPR 2016, in Las Vegas, Nevada.
+</div>
 <h2>Publications</h2>
 
 <div class="publication">
 <a href="http://activity-net.org/"><img src="img/anet_scaled.jpg" class="publogo"></a>
 <strong><a href="http://activity-net.org/">ActivityNet: A Large-Scale Video Benchmark for Human Activity Understanding</a></strong><br>
 Fabian Caba Heilbron, Victor Escorcia, Bernard Ghanem, Juan Niebles<br>
-<em>CVPR, June 2015. - </em>
+<em>CVPR 2015. - </em>
 <a href="https://dl.dropboxusercontent.com/u/18955644/website_files/ActivityNet/ActivityNet_CVPR2015.pdf">Paper</a>
-<a href=#>Poster</a>
 <a href="http://activity-net.org/">Project page</a></span>
 </div>
 
