[html] Overall website updated.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ a.invisible { color : inherit; text-decoration : inherit; }
 .publication .links { position : relative; top : 15px }
 .publication .links a { margin-right : 20px; }
 .codelogo { margin-right : 10px; float : left; border : 0;}
-.code { clear : left; padding-bottom : 10px; vertical-align :middle;} 
+.code { clear : left; padding-bottom : 10px; vertical-align :middle;}
 .code .download a { display : block; margin : 0 15px; float : left;}
 .code strong a { color : #000; }
 #simpsons { margin : 5px auto; text-align : left; color : #B7B7B7; }
@@ -53,7 +53,7 @@ a.invisible { color : inherit; text-decoration : inherit; }
 <img src="img/fabian.png" id="me" width="180" itemprop="photo" class="img-circle">
 </div>
 
-<p> I am a PhD student at <a href="http://www.kaust.edu.sa/">KAUST</a> (Kingdom of Saudi Arabia) advised by Professor <a href="http://www.bernardghanem.com/">Bernard Ghanem</a>. My research interests lie in Computer Vision and Machine Learning. Specifically, I aim to tackle challenges of human activity recognition at large scale. I study efficient ways to harvest and annotate massive amount of data depicting human activities.</p>
+<p> I am a PhD student at <a href="http://www.kaust.edu.sa/">KAUST</a> (Kingdom of Saudi Arabia) advised by Professor <a href="http://www.bernardghanem.com/">Bernard Ghanem</a>. My research interests lie in Computer Vision and Machine Learning. Specifically, I aim to tackle challenges of human activity recognition at large scale. I study efficient ways to harvest, annotate, and understand massive amount of video data depicting human behaviours.</p>
 
 <p> I received my Master degree in Electronics from <a href="http://www.uninorte.edu.co/">Universidad del Norte</a> in 2013, under the supervision of Professor <a href="http://www.niebles.net/">Juan Carlos Niebles</a>.</p>
 
@@ -76,43 +76,80 @@ a.invisible { color : inherit; text-decoration : inherit; }
 </div>
 
 <h2>News</h2>
-<b>[03-02-2016]</b> One paper accepted to CVPR 2016:
+<b>[11-07-2016]</b> One paper accepted to ECCV 2016:
 <div class="publication" style="margin-left: 10px;">
-<strong><a href=#>Fast Temporal Activity Proposals for Efficient Detection of Human Actions in Untrimmed Videos</a></strong><br>
-Fabian Caba Heilbron, Juan Carlos Niebles, Bernard Ghanem. <em>CVPR, June 2016.</em>
+<strong><a href=#>DAPs: Deep Action Proposals for Action Understanding.</a></strong><br>
+Victor Escorcia, Fabian Caba Heilbron, Juan Carlos Niebles, Bernard Ghanem. <em>ECCV, October 2016.</em>
 </div>
 
-<b>[02-18-2016]</b> ActivityNet Large Scale Activity Recognition Challenge <a target="_blank" href="http://activity-net.org/challenges/2016/">Website</a> is released.
-<div class="publication" style="margin-left: 10px;">
-The Challenge is a half-day workshop to be held on July 1 in conjuction with CVPR 2016, in Las Vegas, Nevada.
-</div>
 <h2>Publications</h2>
 
 <div class="publication">
-<a href="http://activity-net.org/"><img src="img/anet_scaled.jpg" class="publogo"></a>
-<strong><a href="http://activity-net.org/">ActivityNet: A Large-Scale Video Benchmark for Human Activity Understanding</a></strong><br>
-Fabian Caba Heilbron, Victor Escorcia, Bernard Ghanem, Juan Niebles<br>
-<em>CVPR 2015. - </em>
-<a href="https://dl.dropboxusercontent.com/u/18955644/website_files/ActivityNet/ActivityNet_CVPR2015.pdf">Paper</a>
-<a href="http://activity-net.org/">Project page</a></span>
+<a href="temporalproposals/index.html"><img src="img/proposals.png" class="publogo" width="228" height="85"></a>
+<strong><a href="temporalproposals/index.html">Fast Temporal Activity Proposals for Efficient Detection of Human Actions in Untrimmed Videos</a></strong><br>
+<b>Fabian Caba Heilbron</b>, Juan Carlos Niebles, Bernard Ghanem<br>
+<em>Las Vegas, CVPR 2016. - </em>
+[<a href="http://www.cv-foundation.org/openaccess/content_cvpr_2016/papers/Heilbron_Fast_Temporal_Activity_CVPR_2016_paper.pdf">Paper</a>]
+[<a href="temporalproposals/index.html">Project page</a>]
+[<a href="https://github.com/cabaf/sparseprop">Code (Github)</a>]
+[Demo]
+</span>
 </div>
+
+</br>
 
 <div class="publication">
-<a href="actioncue/index.html"><img src="img/actioncue.jpg" class="publogo"></a>
-<strong><a href="actioncue/index.html">Camera Motion and Surrounding Scene Appearance as Context for Action Recognition</a></strong><br>
-Fabian Caba Heilbron, Ali Thabet, Juan Carlos Niebles, Bernard Ghanem<br>
-<em>ACCV 2014. - </em>
-<a href="actioncue/paper/actioncue.pdf">Paper</a>
-<a href="actioncue/poster/actioncue.pdf">Poster</a>
-<a href="actioncue/index.html">Project page</a></span>
+<a href="http://activity-net.org/"><img src="img/anet.png" class="publogo" width="228" height="55"></a>
+<strong><a href="http://activity-net.org/">ActivityNet: A Large-Scale Video Benchmark for Human Activity Understanding</a></strong><br>
+<b>Fabian Caba Heilbron</b>, Victor Escorcia, Bernard Ghanem, Juan Carlos Niebles<br>
+<em>Boston, CVPR 2015. - </em>
+[<a href="https://dl.dropboxusercontent.com/u/18955644/website_files/ActivityNet/ActivityNet_CVPR2015.pdf">Paper</a>]
+[<a href="http://activity-net.org/">Project page</a>]
+[<a href="https://github.com/activitynet/ActivityNet">Code (Github)</a>]
+[<a href="http://activity-net.org/explore.html">Demo</a>]
+</span>
 </div>
 
+</br>
+
+<div class="publication">
+<a href="https://ivul.kaust.edu.sa/Pages/Pub-Manhattan-Frame-Estimation-CVPR-2015.aspx"><img src="img/manhatan.png" class="publogo" width="228" height="90"></a>
+<strong><a href="https://ivul.kaust.edu.sa/Pages/Pub-Manhattan-Frame-Estimation-CVPR-2015.aspx">Robust Manhattan Frame Estimation from a Single RGB-D Image
+</a></strong><br>
+Bernard Ghanem, Ali Thabet, Juan Carlos Niebles, <b>Fabian Caba Heilbron</b><br>
+<em>Boston, CVPR 2015. - </em>
+[<a href="http://www.cv-foundation.org/openaccess/content_cvpr_2015/papers/Ghanem_Robust_Manhattan_Frame_2015_CVPR_paper.pdf">Paper</a>]
+[<a href="https://ivul.kaust.edu.sa/Pages/Pub-Manhattan-Frame-Estimation-CVPR-2015.aspx">Project page</a>]
+[<a href="https://ivul.kaust.edu.sa/Documents/more/code/MFE.zip">Code</a>]
+[<a href="https://ivul.kaust.edu.sa/Documents/Data/Robust%20Manhattan%20Frame%20Estimation%20from%20a%20Single%20RGB-D%20Image.zip">Data</a>]
+</span>
+</div>
+
+</br>
+</br>
+
+<div class="publication">
+<a href="actioncue/index.html"><img src="img/actioncue.png" class="publogo" width="228" height="90"></a>
+<strong><a href="actioncue/index.html">Camera Motion and Surrounding Scene Appearance as Context for Action Recognition</a></strong><br>
+<b>Fabian Caba Heilbron</b>, Ali Thabet, Juan Carlos Niebles, Bernard Ghanem<br>
+<em>Singapore, ACCV 2014. - </em>
+[<a href="actioncue/paper/actioncue.pdf">Paper</a>]
+[<a href="actioncue/index.html">Project page</a>]</span>
+<!--<a href="actioncue/poster/actioncue.pdf">Poster</a>-->
+</div>
+
+</br>
+
 <div class="publication" style="margin-top: 20px;">
-<a href="http://yamdrok.stanford.edu/crowd/icmr.pdf"><img src="img/crowd2.jpg" class="publogo"></a>
+<a href="http://yamdrok.stanford.edu/crowd/icmr.pdf"><img src="img/crowd.png" class="publogo" width="228" height="80"></a>
 <strong><a href="http://yamdrok.stanford.edu/crowd/icmr.pdf">Collecting and Annotating Human Activities in Web Videos</a></strong><br>
-Fabian Caba Heilbron, Juan Carlos Niebles<br>
-<em>ICMR 2014. - </em>
-<a href="http://yamdrok.stanford.edu/crowd/icmr.pdf">Paper</a> <a href="#">Poster</a></span> 
+<b>Fabian Caba Heilbron</b>, Juan Carlos Niebles<br>
+<em>Glasgow, ICMR 2014. - </em>
+[<a href="http://yamdrok.stanford.edu/crowd/icmr.pdf">Paper</a>]
+[<a href="https://github.com/cabaf/activity_annotation">Code (Github)</a>]
+[<a href="http://yamdrok.stanford.edu/annotate/index.html?&taskId=0001">Demo</a>]
+</span>
+<!--<a href="#">Poster</a> </br></span>-->
 </div>
 
 <!--
