--- a/temporalproposals/index.html
+++ b/temporalproposals/index.html
@@ -17,7 +17,7 @@ body
     margin : 25px auto;
     background-color : #fff;
     box-shadow: 0px 0px 10px #999;
-    border-radius: 15px; 
+    border-radius: 15px;
 }
 
 .contentblock
@@ -34,7 +34,7 @@ body
     padding : 25px 50px;
     vertical-align : top;
     box-shadow: 0px 0px 10px #999;
-    border-radius: 15px; 
+    border-radius: 15px;
 }
 
 a, a:visited
@@ -55,7 +55,7 @@ a, a:visited
     font-style : italic;
 }
 
-#authors a 
+#authors a
 {
     margin : 0 10px;
 }
@@ -81,7 +81,7 @@ p code
 }
 #teasers
 {
-    margin : 0 auto;    
+    margin : 0 auto;
 }
 
 #teasers td
@@ -93,7 +93,7 @@ p code
 
 #teasers img
 {
-    width : 250px; 
+    width : 250px;
 }
 
 #results img
@@ -105,7 +105,7 @@ p code
     margin : 0 auto;
 }
 
-#sift 
+#sift
 {
     margin : 0 auto;
 }
@@ -115,14 +115,14 @@ p code
     width : 250px;
 }
 
-.downloadpaper 
+.downloadpaper
 {
     padding-left : 20px;
     float : right;
     text-align : center;
 }
 
-.downloadpaper a 
+.downloadpaper a
 {
     font-weight : bold;
     text-align : center;
@@ -200,7 +200,7 @@ In many large-scale video analysis scenarios, one is interested in localizing an
 <h4>Resources:</h4>
 <li><span>Download our CVPR 2016 <strong> <a href="paper/temporal_proposals.pdf">Paper</a>. </strong></br></span></li>
 <li><span>Check out our <strong> <a href="poster/temporal_proposals.pdf">Poster presentation!</a> </strong></br></span></li>
-<li><span><strong>Code will be available soon!</strong> </strong></span></li>
+<li><span><strong>Code is available in <a href="https://github.com/cabaf/sparseprop"><b>this Github repository!</b></a>!</strong> </strong></span></li>
 
 <!--
 can be cloned from <strong><a href="https://github.com/cabaf/actioncue.git">Here!</a></strong></span></li>
